# cmd/server/docs/swagger.json
@@ -18,6 +18,61 @@
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
+        "/circles": {
+            "get": {
+                "description": "サークル一覧を取得します",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "circles"
+                ],
+                "summary": "サークル一覧取得",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/go-arch-practice_web_models.CircleIndexResponseModel"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "サークルを登録します",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "circles"
+                ],
+                "summary": "サークル登録",
+                "parameters": [
+                    {
+                        "description": "サークル",
+                        "name": "circle",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/go-arch-practice_web_models.CirclePostRequestModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/go-arch-practice_web_models.CirclePostResponseModel"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "description": "ユーザ一覧を取得します",
@@ -35,7 +90,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserIndexResponseModel"
+                            "$ref": "#/definitions/go-arch-practice_web_models.UserIndexResponseModel"
                         }
                     }
                 }
@@ -59,7 +114,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UserPostRequestModel"
+                            "$ref": "#/definitions/go-arch-practice_web_models.UserPostRequestModel"
                         }
                     }
                 ],
@@ -67,7 +122,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserPostResponseModel"
+                            "$ref": "#/definitions/go-arch-practice_web_models.UserPostResponseModel"
                         }
                     }
                 }
@@ -99,7 +154,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserGetResponseModel"
+                            "$ref": "#/definitions/go-arch-practice_web_models.UserGetResponseModel"
                         }
                     }
                 }
@@ -130,7 +185,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UserPutRequestModel"
+                            "$ref": "#/definitions/go-arch-practice_web_models.UserPutRequestModel"
                         }
                     }
                 ],
@@ -138,7 +193,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserPostResponseModel"
+                            "$ref": "#/definitions/go-arch-practice_web_models.UserPostResponseModel"
                         }
                     }
                 }
@@ -179,7 +234,54 @@
         }
     },
     "definitions": {
-        "models.UserGetResponseModel": {
+        "go-arch-practice_web_models.CircleIndexResponseModel": {
+            "type": "object",
+            "properties": {
+                "circles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/go-arch-practice_web_models.CircleResponseModel"
+                    }
+                }
+            }
+        },
+        "go-arch-practice_web_models.CirclePostRequestModel": {
+            "type": "object",
+            "properties": {
+                "circle_name": {
+                    "type": "string"
+                },
+                "owner_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "go-arch-practice_web_models.CirclePostResponseModel": {
+            "type": "object",
+            "properties": {
+                "created_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "go-arch-practice_web_models.CircleResponseModel": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "member_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "go-arch-practice_web_models.UserGetResponseModel": {
             "type": "object",
             "properties": {
                 "id": {
@@ -190,18 +292,18 @@
                 }
             }
         },
-        "models.UserIndexResponseModel": {
+        "go-arch-practice_web_models.UserIndexResponseModel": {
             "type": "object",
             "properties": {
                 "users": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.UserResponseModel"
+                        "$ref": "#/definitions/go-arch-practice_web_models.UserResponseModel"
                     }
                 }
             }
         },
-        "models.UserPostRequestModel": {
+        "go-arch-practice_web_models.UserPostRequestModel": {
             "type": "object",
             "properties": {
                 "name": {
@@ -209,7 +311,7 @@
                 }
             }
         },
-        "models.UserPostResponseModel": {
+        "go-arch-practice_web_models.UserPostResponseModel": {
             "type": "object",
             "properties": {
                 "created_id": {
@@ -217,7 +319,7 @@
                 }
             }
         },
-        "models.UserPutRequestModel": {
+        "go-arch-practice_web_models.UserPutRequestModel": {
             "type": "object",
             "properties": {
                 "name": {
@@ -225,7 +327,7 @@
                 }
             }
         },
-        "models.UserResponseModel": {
+        "go-arch-practice_web_models.UserResponseModel": {
             "type": "object",
             "properties": {
                 "id": {
